--- a/src/YesSql.Provider.Common/YesSql.Provider.Common.csproj
+++ b/src/YesSql.Provider.Common/YesSql.Provider.Common.csproj
@@ -1,10 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <RootNamespace>YesSql.Provider</RootNamespace>
         <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
         <VersionPrefix>1.0.0</VersionPrefix>
     </PropertyGroup>
-
+    <ItemGroup>
+        <PackageReference Include="Dapper.StrongName" Version="2.0.30" />
+    </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\YesSql.Abstractions\YesSql.Abstractions.csproj" />
     </ItemGroup>
