--- a/src/YesSql.Abstractions/YesSql.Abstractions.csproj
+++ b/src/YesSql.Abstractions/YesSql.Abstractions.csproj
@@ -1,9 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net461;netstandard2.0;netstandard2.1</TargetFrameworks>
+        <TargetFrameworks>netstandard2.0;</TargetFrameworks>
         <RootNamespace>YesSql</RootNamespace>
         <VersionPrefix>2.0.0</VersionPrefix>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    </PropertyGroup>
+
+    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard2.0|AnyCPU'">
+      <DefineConstants>DEBUG;TRACE</DefineConstants>
+      <DebugType>full</DebugType>
+      <DebugSymbols>true</DebugSymbols>
+      <WarningLevel>1</WarningLevel>
     </PropertyGroup>
     <ItemGroup Condition=" '$(TargetFramework)' != 'netstandard2.1' ">
         <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="1.1.1" />
