--- a/src/YesSql.Core/YesSql.Core.csproj
+++ b/src/YesSql.Core/YesSql.Core.csproj
@@ -1,19 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFrameworks>net461;netstandard2.0;netstandard2.1</TargetFrameworks>
+        <TargetFrameworks>netstandard2.0</TargetFrameworks>
         <VersionPrefix>2.0.0</VersionPrefix>
         <RootNamespace>YesSql</RootNamespace>
         <LangVersion>8.0</LangVersion>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard2.0|AnyCPU'">
+      <DefineConstants>DEBUG;TRACE</DefineConstants>
+      <DebugType>full</DebugType>
+      <DebugSymbols>true</DebugSymbols>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Dapper.StrongName" Version="2.0.35" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+        <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="2.19.70" />
         <PackageReference Include="System.Collections.Immutable" Version="1.7.1" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.0.0" />
-    </ItemGroup>
-    <ItemGroup>
-        <ProjectReference Include="..\YesSql.Abstractions\YesSql.Abstractions.csproj" />
     </ItemGroup>
 </Project>
