--- a/src/YesSql.Abstractions/YesSql.Abstractions.csproj
+++ b/src/YesSql.Abstractions/YesSql.Abstractions.csproj
@@ -4,6 +4,8 @@
         <TargetFrameworks>net461;netstandard2.0;netstandard2.1</TargetFrameworks>
         <RootNamespace>YesSql</RootNamespace>
         <VersionPrefix>2.0.0</VersionPrefix>
+        <Version>2.0.1-beta</Version>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
     <ItemGroup Condition=" '$(TargetFramework)' != 'netstandard2.1' ">
         <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="1.1.1" />
