--- a/src/YesSql.Provider.Common/YesSql.Provider.Common.csproj
+++ b/src/YesSql.Provider.Common/YesSql.Provider.Common.csproj
@@ -3,6 +3,8 @@
         <RootNamespace>YesSql.Provider</RootNamespace>
         <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
         <VersionPrefix>1.0.0</VersionPrefix>
+        <Version>2.0.1-beta</Version>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Dapper.StrongName" Version="2.0.30" />
