--- a/src/YesSql.Provider.MySql/YesSql.Provider.MySql.csproj
+++ b/src/YesSql.Provider.MySql/YesSql.Provider.MySql.csproj
@@ -3,6 +3,8 @@
     <PropertyGroup>
         <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
         <VersionPrefix>1.0.0</VersionPrefix>
+        <Version>2.0.1-beta</Version>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="MySqlConnector" Version="0.66.0" />
