--- a/src/YesSql.Provider.Oracle/YesSql.Provider.Oracle.csproj
+++ b/src/YesSql.Provider.Oracle/YesSql.Provider.Oracle.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
+﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
@@ -7,6 +7,8 @@
     <Authors>Sebastien Ros, SCC Portal, mazuryv</Authors>
     <AssemblyName>YesSql.Provider.Oracle</AssemblyName>
     <RootNamespace>YesSql.Provider.Oracle</RootNamespace>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>2.0.1-beta</Version>
   </PropertyGroup>
   
   <ItemGroup>
