--- a/src/YesSql.Provider.SqlServer/YesSql.Provider.SqlServer.csproj
+++ b/src/YesSql.Provider.SqlServer/YesSql.Provider.SqlServer.csproj
@@ -2,6 +2,8 @@
     <PropertyGroup>
         <TargetFrameworks>netstandard2.0</TargetFrameworks>
         <VersionPrefix>1.0.0</VersionPrefix>
+        <Version>2.0.1-beta</Version>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
     <ItemGroup>
         <ProjectReference Include="..\YesSql.Core\YesSql.Core.csproj" />
